Add font-family body add comments

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         </div>
 
         <div class="number">
+
             <a href="#red">1</a>
             <a href="#green">2</a>
             <a href="#yellow">3</a>
-        
+
         </div>
         <!-- /.number -->
 
     </div>
-    <!-- /.content -->
+    <!-- /.content red -->
+
     <div id="green" class="content green">
 
         <div class="content_img">
@@ -45,7 +47,8 @@
         </div>
 
     </div>
-    <!-- /.content -->
+    <!-- /.content green -->
+
     <div id="yellow" class="content yellow">
 
         <div class="content_img">
@@ -58,7 +61,8 @@
         </div>
 
     </div>
-    <!-- /.content -->
+    <!-- /.content yellow -->
+
 </div>
 <!-- /.container -->
 
